--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "clean": "node -e \"['out','.vite','dist'].forEach(d=>require('fs').rmSync(d,{recursive:true,force:true}))\""
   },
   "keywords": [],
   "author": {
